updated interest section

--- a/index.html
+++ b/index.html
@@ -213,13 +213,18 @@
               <div class="custom-card-inner">
                 <h3>Full Stack Developer</h3>
                 <p class="fst-italic">
-                  A results-driven Full-Stack Developer specializing in JavaScript, TypeScript, React.js, Node.js, and Python
-            to build high-performance, responsive web applications. Proven ability to develop end-to-end solutions, from
-            creating RESTful APIs with Node.js to building interactive user interfaces with React. Experienced in API
-            integration, including the OpenAI and Pexels APIs , and developing AI-powered applications with
-            TensorFlow.js and Python. Proficient in database management with Firebase Realtime Database and Firestore. A
-            collaborative team player with hands-on experience in Agile development environments and version control
-            with Git and GitHub.
+                  A results-driven Full-Stack Developer specializing in JavaScript, TypeScript, React.js, Node.js, and
+                  Python
+                  to build high-performance, responsive web applications. Proven ability to develop end-to-end
+                  solutions, from
+                  creating RESTful APIs with Node.js to building interactive user interfaces with React. Experienced in
+                  API
+                  integration, including the OpenAI and Pexels APIs , and developing AI-powered applications with
+                  TensorFlow.js and Python. Proficient in database management with Firebase Realtime Database and
+                  Firestore. A
+                  collaborative team player with hands-on experience in Agile development environments and version
+                  control
+                  with Git and GitHub.
                 </p>
                 <div class="row">
                   <div class="col-lg-6">
@@ -243,7 +248,8 @@
                   </div>
                 </div>
                 <p>
-                  Full-Stack Developer specializing in React.js, Node.js, Python, and TypeScript to build and deploy responsive, API-driven web applications
+                  Full-Stack Developer specializing in React.js, Node.js, Python, and TypeScript to build and deploy
+                  responsive, API-driven web applications
                   using Firebase and RESTful APIs.
                 </p>
               </div>
@@ -403,7 +409,7 @@
               <div class="cube-face">
                 <i class="fa-brands fa-php" style="color:#777BB4;"></i>
                 <span>PHP</span>
-            </div>
+              </div>
               <div class="cube-face">
                 <i class="fa-brands fa-node-js" style="color:#68A063;"></i>
                 <span>Node.Js</span>
@@ -1298,13 +1304,13 @@
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="interests-box" data-aos="fade-up">
               <div class="interest-orb">
-                <div class="icon"><i class="bi bi-laptop"></i></div>
-                <span class="tooltip">Web Development</span>
+                <div class="icon"><i class="bi bi-robot"></i></div>
+                <span class="tooltip">AI/ML</span>
               </div>
-              <h4 class="title"><a href="#">Web Development</a></h4>
-              <p class="description">I’m passionate about building user-friendly digital experiences, combining
-                front-end creativity with back-end logic. I love transforming ideas into interactive websites using
-                coding languages and frameworks.</p>
+              <h4 class="title"><a href="#">AI?ML</a></h4>
+              <p class="description">My interest lies in leveraging AI and Machine Learning to solve practical problems
+                and enhance user experiences. I enjoy building applications with tools like TensorFlow.js and the OpenAI
+                API, supported by my professional AI certifications.</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 mb-4">
