--- a/index.html
+++ b/index.html
@@ -419,12 +419,18 @@
         </div>
 
 
-        <!-- Skill Bars -->
+        <!-- Skill Bars with Real Icons -->
+        <!-- Skill Bars with Animated Icons -->
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
+
             <div class="progress">
-              <span class="skill"><i class="fab fa-html5"></i> HTML <i class="val">70%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg"
+                  alt="HTML5" class="animated-icon">
+                HTML <i class="val">70%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -432,7 +438,11 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-css3-alt"></i> CSS <i class="val">40%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg"
+                  alt="CSS3" class="animated-icon">
+                CSS <i class="val">40%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -440,15 +450,12 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-js-square"></i> JavaScript <i class="val">20%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill"><i class="fas fa-database"></i> SQL <i class="val">20%</i></span>
+              <span class="skill">
+                <img
+                  src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-original.svg"
+                  alt="JavaScript" class="animated-icon">
+                JavaScript <i class="val">20%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -457,23 +464,39 @@
 
             <div class="progress">
               <span class="skill">
-                <!-- TypeScript Logo -->
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg"
+                  alt="SQL" class="animated-icon">
+                SQL <i class="val">20%</i>
+              </span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">
                 <img
                   src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg"
-                  alt="TypeScript" class="ts-icon">
-                TypeScript
-                <i class="val">40%</i>
+                  alt="TypeScript" class="animated-icon">
+                TypeScript <i class="val">40%</i>
               </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+
             <div class="progress">
-              <span class="skill"><i class="fab fa-python"></i> Python <i class="val">30%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
+                  alt="Python" class="animated-icon">
+                Python <i class="val">30%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -481,7 +504,11 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-figma"></i> Figma <i class="val">50%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/figma/figma-original.svg"
+                  alt="Figma" class="animated-icon">
+                Figma <i class="val">50%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -489,7 +516,11 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-git-alt"></i> Git <i class="val">50%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg"
+                  alt="Git" class="animated-icon">
+                Git <i class="val">50%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -497,7 +528,11 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-php"></i> PHP <i class="val">50%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/php/php-original.svg"
+                  alt="PHP" class="animated-icon">
+                PHP <i class="val">50%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -505,15 +540,21 @@
             </div>
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-node-js"></i> Node.Js <i class="val">30%</i></span>
+              <span class="skill">
+                <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/nodejs/nodejs-original.svg"
+                  alt="Node.js" class="animated-icon">
+                Node.js <i class="val">30%</i>
+              </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
+
           </div>
 
         </div>
+
 
 
       </div>
@@ -558,6 +599,48 @@
       .fa-node-js {
         color: #68A063;
       }
+
+      .animated-icon {
+        width: 25px;
+        margin-right: 8px;
+        display: inline-block;
+        opacity: 0;
+        transform: translateY(10px);
+        animation: iconAppear 1s ease forwards;
+      }
+
+      .animated-icon:nth-child(1) {
+        animation-delay: 0.1s;
+      }
+
+      .animated-icon:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      .animated-icon:nth-child(3) {
+        animation-delay: 0.3s;
+      }
+
+      .animated-icon:nth-child(4) {
+        animation-delay: 0.4s;
+      }
+
+      .animated-icon:nth-child(5) {
+        animation-delay: 0.5s;
+      }
+
+      @keyframes iconAppear {
+        0% {
+          opacity: 0;
+          transform: translateY(10px);
+        }
+
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+
 
       /* TypeScript logo */
       .ts-icon {
