Commented Filter line in Workshop

--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@
               <li data-filter=".filter-app">Online Courses</li>
               <li data-filter=".filter-card">Internship</li>
               <li data-filter=".filter-web">Symposiums</li>
-              <li data-filter=".filter-shop">Workshop</li>
+              <!-- <li data-filter=".filter-shop">Workshop</li> -->
             </ul>
           </div>
         </div>
